--- a/CRUD/templates/create.html
+++ b/CRUD/templates/create.html
@@ -14,14 +14,14 @@
             <div class="form-group">
               <label for="">Name:</label>
               <input type="text"
-                class="form-control" name="" id="" aria-describedby="helpId" placeholder="">
-              <small id="helpId" class="form-text text-muted">Help text</small>
+                class="form-control" name="name" id="name" aria-describedby="helpId" placeholder="">
+              <small id="helpId" class="form-text text-muted">Write your name</small>
             </div>
             
             <div class="form-group">
               <label for="">Email:</label>
-              <input type="email" class="form-control" name="" id="" aria-describedby="emailHelpId" placeholder="">
-              <small id="emailHelpId" class="form-text text-muted">Help text</small>
+              <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelpId" placeholder="">
+              <small id="emailHelpId" class="form-text text-muted">Write your email</small>
             </div>
 
             <button type="submit" class="btn btn-primary">Add new employee</button>
