--- a/CRUD/templates/edit.html
+++ b/CRUD/templates/edit.html
@@ -1,4 +1,4 @@
-{{ define "create" }}
+{{ define "edit" }}
 {{ template "header" }}
 
 <div class="card">
@@ -7,24 +7,25 @@
         Employee
     </div>
 
-    <!-- we create a form, which allows to send information with post method to the url /insert -->
     <div class="card-body">
-        <form method="post" action="/insert">
+        <form method="post" action="/update">
+
+            <input type="hidden" value="{{.Id}}" class="form-control" name="id" id="id" placeholder="">
 
             <div class="form-group">
               <label for="">Name:</label>
               <input type="text"
-                class="form-control" name="name" id="name" aria-describedby="helpId" placeholder="">
+                class="form-control" name="name" value="{{.Name}}" id="name" aria-describedby="helpId" placeholder="">
               <small id="helpId" class="form-text text-muted">Write your name</small>
             </div>
             
             <div class="form-group">
               <label for="">Email:</label>
-              <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelpId" placeholder="">
+              <input type="email" class="form-control" name="email" value="{{.Email}}" id="email" aria-describedby="emailHelpId" placeholder="">
               <small id="emailHelpId" class="form-text text-muted">Write your email</small>
             </div>
 
-            <button type="submit" class="btn btn-success">Add new employee</button>
+            <button type="submit" class="btn btn-success">Modify employee</button>
 
             <a name="" id="" class="btn btn-primary" href="/" role="button">Cancel</a>
 
