--- a/CRUD/templates/header.html
+++ b/CRUD/templates/header.html
@@ -16,8 +16,8 @@
     <!-- menu -->
 <nav class="navbar navbar-expand navbar-light bg-light">
     <div class="nav navbar-nav">
-        <a class="nav-item nav-link active" href="#">System <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="#">Home</a>
+        <a class="nav-item nav-link active" href="/">Main <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="/create">Create new employee</a>
     </div>
 </nav>
 
